force-app/main/default/objects/Patient__c/fields/Insurance_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Verification_Status__c</fullName>
    <label>Insurance Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Not Verified</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Needs Follow-Up</fullName>
            </value>
            <value>
                <fullName>Invalid Information</fullName>
            </value>
            <value>
                <fullName>Coverage Active</fullName>
            </value>
            <value>
                <fullName>Coverage Inactive</fullName>
            </value>
            <value>
                <fullName>Authorization Required</fullName>
            </value>
            <value>
                <fullName>Authorization Approved</fullName>
            </value>
            <value>
                <fullName>Authorization Denied</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Declined to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>