force-app/main/default/objects/Patient__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <label>Mailing Street</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>