force-app/main/default/objects/Patient__c/fields/Martial_Status__c.field-meta.xml
<CustomField>
    <fullName>Martial_Status__c</fullName>
    <label>Martial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Widow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>