force-app/main/default/objects/Patient__c/fields/Primary_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Insurance Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>